<resources>
    <string name="app_name">MyRatp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="saved_fragment">Saved fragment</string>
    <string name="plans_fragment">Plans fragment</string>
    <string name="qrcode_fragment">QR Code fragment</string>
    <string name="timetable_fragment">Timetable fragment</string>
    <string name="horaires">Horaires</string>
    <string name="plans">Plans</string>
    <string name="favoris">Favoris</string>
    <string name="qr_code">QR Code</string>
    <string name="train">Train</string>
    <string name="bus">Bus</string>
    <string name="metro">Métro</string>
    <string name="rer">RER</string>
    <string name="tramway">Tramway</string>
    <string name="noctilien">Noctilien</string>
    <string name="choix_mode_transport">Choisissez votre mode de transport</string>
    <string name="station">Station :</string>
    <string name="code">code :</string>
    <string name="destination">destination :</string>
    <string name="info_traffic">Info Traffic : Aucunes données</string>
    <string name="my_ratp">MyRatp</string>
    <string name="logo_train">Logo Train</string>
    <string name="code_bus">code :</string>
    <string name="destination_bus">destination :</string>
    <string name="nom_ligne_bus">nom ligne :</string>
    <string name="metrolist">MetroList</string>
    <string name="code_train">code :</string>
    <string name="nom_ligne_train">nom ligne :</string>
    <string name="destination_train">destination :</string>
    <string name="traffic">Info trafic</string>
    <string name="title_traffic">Statut :</string>
    <string name="message_traffic">Message : </string>
    <string name="chevron_droit">chevron droit</string>
    <string name="message">Message :</string>
    <string name="statut">statut</string>
    <string name="back">back</string>
    <string name="aucune_station_en_favoris">aucune station en favoris</string>
    <string name="coeur">Coeur</string>
    <string name="ajoutez_des_favoris">Ajoutez des favoris !</string>
    <string name="worried">Personnage inquiet</string>
    <string name="no_informations">Désolé nous n\'avons pas d\'informations concernant cette ligne</string>
    <string name="scan_qr_code">Veuillez scanner un QR Code</string>
    <string name="chargement">Veuillez patientez en attendant le chargement</string>
    <string name="Camera_autorisation">Veuillez autoriser l\'accès à la caméra</string>
    <string name="Connexion_internet_retry">Vérifiez votre connexion internet et réessayez à nouveau</string>
    <string name="connexion_internet">Veuillez vous connecter à internet</string>
    <string name="restart_app">Redémarrer l\'application</string>
    <string name="station_add">La station a bien été ajoutée des favoris</string>
    <string name="station_delete">La station a bien été supprimée des favoris</string>
    <string name="saisissez_votre_station">Saisissez votre station</string>
    <string name="message_noctilien_horaire">Vos lignes Noctilien n’étant pas en circulation à cette heure, nous vous proposons de consulter les horaires de référence directement sur le site de la RATP.</string>
    <string name="image_vide">image vide</string>
    <string name="attention">attention</string>
    <string name="message_train_horaires">Certaines lignes (C, D) ne sont pas renseignées mais le seront prochainement, nous vous proposons de consulter les horaires de référence directement sur le site de la SNCF.</string>
</resources>
