<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carte_metrobis"
    android:orientation="vertical"
    tools:context=".ui.PlansFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/title_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/train"
            android:src="@drawable/subway" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/specialBlue"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horaires"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choix_mode_transport"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/horaires"
            android:src="@drawable/duration" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_bus"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded_rectangle"
            android:drawableStart="@drawable/ic_bus"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/bus"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_metro"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded_rectangle"
            android:drawableStart="@drawable/ic_metro"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/metro"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_train"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded_rectangle"
            android:drawableStart="@drawable/ic_train"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/rer"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_tram"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded_rectangle"
            android:drawableStart="@drawable/ic_tram"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/tramway"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_noctilien"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded_rectangle"
            android:drawableStart="@drawable/ic_noctilien"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/noctilien"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>