<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/busline_code_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_bus"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/busline_destination_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_bus"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/busline_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_ligne_bus"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>