<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PlansFragment"
    android:background="@drawable/carte_metrobis">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/title_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/train"
                android:src="@drawable/subway"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:background="@color/specialBlue"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plans"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choix_mode_transport"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/plans"
                android:src="@drawable/mapter"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_bus"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_bus"
                android:text="@string/bus"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_rectangle"/>
            <Button
                android:id="@+id/button_metro"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_metro"
                android:text="@string/metro"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_rectangle"/>
            <Button
                android:id="@+id/button_train"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_train"
                android:text="@string/rer"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_rectangle"/>
            <Button
                android:id="@+id/button_tram"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_tram"
                android:text="@string/tramway"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_rectangle"/>
            <Button
                android:id="@+id/button_noctilien"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_noctilien"
                android:text="@string/noctilien"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_rectangle"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>