<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="3dp"
    android:animateLayoutChanges="true"
    android:elevation="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/specialWhite"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical|start"
            android:src="@drawable/tramway"
            android:contentDescription="@string/tramway" />
        <ImageView
            android:id="@+id/image_tram_line"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical|start"
            android:contentDescription="@string/tramway" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tramline_code_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_bus"
                android:textSize="15sp"
                android:textColor="@color/specialBlack"/>

            <TextView
                android:id="@+id/tramline_destination_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_bus"
                android:textSize="15sp"
                android:textColor="@color/specialBlack"/>

        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/chevron_droit"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>