<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="3dp"
    android:animateLayoutChanges="true"
    android:elevation="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/specialWhite"
    app:cardCornerRadius="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fav_bouton_nocti"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_favorite_border_blue_24dp"
            android:clickable="true"
            android:focusable="true" />

        <!--            android:backgroundTint="@color/colorPrimary" -->


        <ImageView
            android:id="@+id/image_nocti_bleu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/fav_bouton_nocti"
            android:contentDescription="@string/noctilien"
            android:src="@drawable/noctilien" />

        <ImageView
            android:id="@+id/station_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/image_nocti_bleu"
            android:contentDescription="@string/noctilien" />

        <TextView
            android:id="@+id/station_name_textview_nocti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/image_chevron"
            android:layout_toEndOf="@id/station_image_view"
            android:text="@string/station"
            android:textColor="@color/specialBlack"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_chevron"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/chevron_droit"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>